--- a/src/components/Button/index.css
+++ b/src/components/Button/index.css
@@ -68,3 +68,9 @@
     background-color: #fff;
     border-color: #40a9ff;
 }
+
+.corki-btn-disabled:focus, .corki-btn-disabled:hover {
+    color: rgba(0,0,0,0.25);
+    background-color: #f5f5f5;
+    border-color: #d9d9d9;
+}
