Select component use inline-flex

--- a/src/components/Select/index.css
+++ b/src/components/Select/index.css
@@ -1,7 +1,7 @@
 .corki-select {
     cursor: pointer;
     position: relative;
-    display: flex;
+    display: inline-flex;
     height: 32px;
     align-items: center;
     box-sizing: border-box;
