--- a/src/components/Radio/index.css
+++ b/src/components/Radio/index.css
@@ -1,3 +1,21 @@
+.corki-radio-wrapper {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: rgba(0, 0, 0, 0.65);
+    font-size: 14px;
+    font-variant: tabular-nums;
+    line-height: 1.5;
+    list-style: none;
+    -webkit-font-feature-settings: 'tnum';
+    font-feature-settings: 'tnum';
+    position: relative;
+    display: inline-block;
+    margin-right: 8px;
+    white-space: nowrap;
+    cursor: pointer;
+}
+
 .corki-radio {
     box-sizing: border-box;
     margin: 0;
@@ -104,4 +122,23 @@
     margin-right: 8px;
     white-space: nowrap;
     cursor: pointer;
+}
+
+.corki-radio-disabled .corki-radio-inner {
+    background-color: #f5f5f5;
+    border-color: #d9d9d9 !important;
+    cursor: not-allowed;
+}
+
+.corki-radio-wrapper-disabled span {
+    color: rgba(0, 0, 0, 0.25);
+    cursor: not-allowed;
+}
+
+.corki-radio-disabled .corki-radio-input {
+    cursor: not-allowed;
+}
+
+.corki-radio-disabled .corki-radio-inner::after {
+    background-color: rgba(0, 0, 0, 0.2);
 }
